[gd_scene load_steps=8 format=2]

[ext_resource path="res://Script/PhysicComponentEnemy.gd" type="Script" id=1]
[ext_resource path="res://Sprite/360_F_627918281_OdgUoW2JeYbNaiBvObJ21Z7CkLF4ZKhg.jpg" type="Texture" id=2]
[ext_resource path="res://Script/HealthComponent.gd" type="Script" id=3]
[ext_resource path="res://Script/EnemyComponent.gd" type="Script" id=4]
[ext_resource path="res://Font/Dutch Brigade Font - Free Trial.otf" type="DynamicFontData" id=5]

[sub_resource type="DynamicFont" id=2]
size = 20
font_data = ExtResource( 5 )

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 23.25, 21.5 )

[node name="Enemy" type="Node2D" groups=["enemies"]]
script = ExtResource( 4 )

[node name="PhysicComponent" type="KinematicBody2D" parent="." groups=["enemies"]]
collision_layer = 2
collision_mask = 4
script = ExtResource( 1 )

[node name="RichTextLabel" type="Label" parent="PhysicComponent"]
margin_left = -69.0
margin_top = -150.0
margin_right = 71.0
margin_bottom = -120.0
custom_fonts/font = SubResource( 2 )
text = "asdasdasasdasdasd"

[node name="Sprite" type="Sprite" parent="PhysicComponent"]
scale = Vector2( 0.0777083, 0.123958 )
texture = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="PhysicComponent"]
position = Vector2( 1, 0 )
shape = SubResource( 1 )
one_way_collision_margin = 0.0

[node name="HurtBox" type="Area2D" parent="PhysicComponent"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="PhysicComponent/HurtBox"]
shape = SubResource( 1 )
one_way_collision_margin = 0.0

[node name="HealthComponent" type="Node2D" parent="."]
script = ExtResource( 3 )

[connection signal="died" from="HealthComponent" to="." method="_on_HealthComponent_died"]
[connection signal="update_health" from="HealthComponent" to="HealthComponent" method="_on_HealthComponent_update_health"]
